--- a/SharpSenz.Package/SharpSenz.Package.csproj
+++ b/SharpSenz.Package/SharpSenz.Package.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -8,38 +8,61 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>NSenz</PackageId>
-    <PackageVersion>1.0.0.0</PackageVersion>
-    <Authors>Spiridon</Authors>
-    <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
-    <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
+    <PackageId>SharpSenz</PackageId>
+    <PackageVersion>0.1.0.0</PackageVersion>
+    <Authors>Spiridon Sagirov</Authors>
+    <PackageLicenseUrl>https://github.com/SoftwareSpiridon/SharpSenz/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/SoftwareSpiridon/SharpSenz</PackageProjectUrl>
     <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
-    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
+    <RepositoryUrl>https://github.com/SoftwareSpiridon/SharpSenz.git</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Description>NSenz</Description>
-    <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
-    <Copyright>Copyright</Copyright>
-    <PackageTags>NSenz, analyzers</PackageTags>
+    <Description>SharpSenz is a C# abstract monitoring intsrumentation library. It utilizes Roslyn compiler to generate abstract interface calls as you type your code in.</Description>
+    <PackageReleaseNotes>Pre-alpha release</PackageReleaseNotes>
+    <Copyright>Copyright Spiridon Sagirov (SoftwareSpiridon)</Copyright>
+    <PackageTags>SharpSenz, analyzers, code fixes, source generators</PackageTags>
     <DevelopmentDependency>true</DevelopmentDependency>
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
+    <!--TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);IncludeReferencedProjectInPackage;_AddAnalyzersToOutput</TargetsForTfmSpecificContentInPackage-->
     <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);_AddAnalyzersToOutput</TargetsForTfmSpecificContentInPackage>
+
+    <Product>SharpSenz</Product>
+
+    <RepositoryType>git</RepositoryType>
+
+    <Title>Sharp Senz</Title>
   </PropertyGroup>
 
   <ItemGroup>
       <ProjectReference Include="..\SharpSenz\SharpSenz.csproj" />
       <ProjectReference Include="..\SharpSenz.Analyzers\SharpSenz.Analyzers.csproj" />
       <ProjectReference Include="..\SharpSenz.CodeFixes\SharpSenz.CodeFixes.csproj" />
+      <ProjectReference Include="..\SharpSenz.SourceGenerators\SharpSenz.SourceGenerators.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="tools\*.ps1" CopyToOutputDirectory="PreserveNewest" Pack="true" PackagePath="" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="$(OutputPath)\SharpSenz.dll">
+      <Pack>true</Pack>
+      <PackagePath>lib\$(TargetFramework)</PackagePath>
+    </Content>
+  </ItemGroup>
+
+  <Target Name="IncludeReferencedProjectInPackage">
+    <ItemGroup>
+      <TfmSpecificPackageFile Include="$(OutputPath)\SharpSenz.dll" PackagePath="lib/$(TargetFramework)" />
+    </ItemGroup>
+  </Target>
+  
   <Target Name="_AddAnalyzersToOutput">
     <ItemGroup>
+      <TfmSpecificPackageFile Include="$(OutputPath)\SharpSenz.dll" PackagePath="analyzers/dotnet/cs" />
       <TfmSpecificPackageFile Include="$(OutputPath)\SharpSenz.Analyzers.dll" PackagePath="analyzers/dotnet/cs" />
       <TfmSpecificPackageFile Include="$(OutputPath)\SharpSenz.CodeFixes.dll" PackagePath="analyzers/dotnet/cs" />
+      <TfmSpecificPackageFile Include="$(OutputPath)\SharpSenz.SourceGenerators.dll" PackagePath="analyzers/dotnet/cs" />
     </ItemGroup>
   </Target>
 
