--- a/SharpSesz.Client/SharpSesz.Client.csproj
+++ b/SharpSesz.Client/SharpSesz.Client.csproj
@@ -23,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-      <ProjectReference Include="..\SharpSenz\SharpSenz.csproj" />
-      <ProjectReference Include="..\SharpSenz.Analyzers\SharpSenz.Analyzers.csproj" OutputItemType="Analyzer" />
+      <ProjectReference Include="..\SharpSenz\SharpSenz.csproj" OutputItemType="Analyzer" />
+      <ProjectReference Include="..\SharpSenz.Analyzers\SharpSenz.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
       <ProjectReference Include="..\SharpSenz.SourceGenerators\SharpSenz.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
