--- a/UsageExample/HyperDrive/Hyperspace.csproj
+++ b/UsageExample/HyperDrive/Hyperspace.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SharpSenz" Version="0.1.0">
+      <!--<PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>-->
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
